<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/itHome"
        android:title="@string/bicon_home"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:icon="@drawable/hc_bicon_home">
    </item>
    <item
        android:id="@+id/itReservation"
        android:title="@string/bicon_reservation"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:icon="@drawable/hc_bicon_reservation">
    </item>
    <item
        android:id="@+id/itTreat"
        android:title="@string/bicon_treat"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:icon="@drawable/hc_bicon_treat">
    </item>
    <item
        android:id="@+id/itTicket"
        android:title="@string/bicon_ticket"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:icon="@drawable/hc_bicon_ticket">
    </item>
    <item
        android:id="@+id/itPay"
        android:title="@string/bicon_pay"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:icon="@drawable/hc_bicon_pay">
    </item>
</menu>